--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_lista_plac_sub_normalna.xhtml
@@ -62,7 +62,7 @@
                             <h:outputText value="brutto-zus"/>
                         </p:column>
                         <p:column width="20">
-                            <h:outputText value=" "/>
+                            <h:outputText value="student" rendered="#{itempasek.kalendarzmiesiac.angaz.student}" style="color: #009688;"/>
                         </p:column>
                     </p:row>
                     <p:row>
