--- a/kadry/src/main/webapp/admin/index.xhtml
+++ b/kadry/src/main/webapp/admin/index.xhtml
@@ -33,19 +33,19 @@
                                     </p:submenu>
                              <p:menuitem icon="pi pi-file" value="umowy" style="width: 150px" action="Umowa"/>
                             <p:submenu label="czas pracy" style="width: 150px">
-                                <p:menuitem icon="pi pi-ellipsis-v" value="nieobecności" style="width: 150px" onclick="PF('dialogpracownikanieobecnosci').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="nieobecności zbiorcze" style="width: 150px" onclick="PF('dialogpracownikanieobecnoscizbiorcze').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="urlop/choroba/ekwiw." style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="wystaw. rach. do zlec." style="width: 150px" onclick="PF('dialograchunekzlecenia').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="oddelegowanie" style="width: 150px" onclick="PF('dialogoddelegowanie').show()" async="true"/>
+                                <p:menuitem icon="pi pi-user-minus" value="nieobecności" style="width: 150px" onclick="PF('dialogpracownikanieobecnosci').show()" async="true"/>
+                                <p:menuitem icon="pi pi-user-minus" value="nieobecności zbiorcze" style="width: 150px" onclick="PF('dialogpracownikanieobecnoscizbiorcze').show()" async="true"/>
+                                <p:menuitem icon="pi pi-cloud" value="urlop/choroba/ekwiw." style="width: 150px" onclick="PF('dialgoczaspracyurlop').show()" async="true"/>
+                                <p:menuitem icon="pi pi-file-excel" value="zbiorcze rach. do zlec." style="width: 150px" onclick="PF('dialogzbiorczerachunekzlecenia').show()" async="true"/>
+                                <p:menuitem icon="pi pi-file-excel" value="wystaw. rach. do zlec." style="width: 150px" onclick="PF('dialograchunekzlecenia').show()" async="true"/>
+                                <p:menuitem icon="pi pi-calendar" value="kalendarz pracownika" style="width: 150px" onclick="PF('dialogkalendarzmiesiac').show()" async="true"/>
+                                <p:menuitem icon="pi pi-calendar" value="oddelegowanie" style="width: 150px" onclick="PF('dialogoddelegowanie').show()" async="true"/>
                             </p:submenu>
                             <p:submenu label="listy płac" style="width: 150px">
                                 <p:menuitem icon="pi pi-ellipsis-v" value="lista rach. um. zleceń" style="width: 150px" onclick="PF('dialoglistarachunekzlecenia').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="definicja listy" style="width: 150px" onclick="PF('dialoglistadefinicja').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="lista płac" style="width: 150px" onclick="PF('dialoglistaplac').show()" async="true"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="lista płac analiza" style="width: 150px" onclick="PF('dialoglistaplacanaliza').show()" async="true"/>
+                                <p:menuitem icon="pi pi-money-bill" value="lista płac" style="width: 150px" onclick="PF('dialoglistaplac').show()" async="true"/>
+                                <p:menuitem icon="pi pi-money-bill" value="lista płac analiza" style="width: 150px" onclick="PF('dialoglistaplacanaliza').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="karta wynagrodzeń" style="width: 150px" onclick="PF('dialogkartawynagrodzen').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="komornik" style="width: 150px" onclick="PF('dialogkomornik').show()" async="true"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="DRA" style="width: 150px" onclick="PF('dialogdra').show()" async="true"/>
