--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo.xhtml
@@ -8,7 +8,7 @@
     >
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
         <p:outputPanel>
-            <h:form id="SwiadectwoForm">
+            <h:form styleClass="formumowa" id="SwiadectwoForm">
                 <p:panel header="Zestawienie danych do świadectwa">
                     <p:dataTable id="datalist" value="#{rozwiazanieumowyView.dnidoswiadectwa}" var="itemsw"
                                  selectionMode="single" selection="#{rozwiazanieumowyView.selected}" rowIndexVar="itemswin"
