--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo_wydruk.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_swiadectwo_wydruk.xhtml
@@ -8,7 +8,7 @@
     >
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
         <p:outputPanel>
-            <h:form id="SwiadectwoWydrukForm">
+            <h:form styleClass="formumowa" id="SwiadectwoWydrukForm">
                 <p:panel header="Zestawienie danych do świadectwa">
                     <p:commandButton value="druk" styleClass="buttonnorm" actionListener="#{rozwiazanieumowyView.drukujswiadectwo}"/>
                 </p:panel>
