--- a/kadry/src/main/webapp/umowa/sub/menu_wiad.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/menu_wiad.xhtml
@@ -8,7 +8,7 @@
       xmlns:bcf="http://brzaskun.com/facelets"
       xmlns:ui="http://java.sun.com/jsf/facelets"
     >
-    <h:form >
+    <h:form styleClass="formumowa" >
         <p:growl life="7200"  id="messages" ><p:autoUpdate/></p:growl>
     </h:form>
 </ui:composition>   
