--- a/kadry/src/main/webapp/umowa/index.xhtml
+++ b/kadry/src/main/webapp/umowa/index.xhtml
@@ -39,6 +39,9 @@
                         <p:outputPanel style="width: 1800px;">
                             <p:tabView id="akordeon" activeIndex="#{umowaView.tabView}">
                                 <p:tab title="umowy o pracę">
+                                    <p:outputPanel>
+                                        <h:outputText value="Umowy pracownika #{wpisView.pracownik.nazwiskoImie}" styleClass="info"/>
+                                    </p:outputPanel>
                                     <ui:include src="sub/dane_umowa_praca.xhtml"/>
                                     <ui:include src="sub/dane_umowa_zlecenie.xhtml"/>
                                     <ui:include src="sub/dane_umowa_funkcja.xhtml"/>
