--- a/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_edycja_rozwiazania.xhtml
@@ -8,7 +8,7 @@
 >
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
             <p:outputPanel>
-                <h:form id="RozwiazaniaNowyForm">
+                <h:form styleClass="formumowa" id="RozwiazaniaNowyForm">
                     <p:panel header="dodawanie nowego rozwiązania umowy">
                         <p:panelGrid columns="2" >
                             <h:outputText value="rozwiązywana umowa: "/>
