--- a/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane1_rozwiazania.xhtml
@@ -8,7 +8,7 @@
 >
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
             <p:outputPanel>
-                <h:form id="RozwiazaniaListForm">
+                <h:form styleClass="formumowa" id="RozwiazaniaListForm">
                     <p:panel header="Wykaz wypowiedzeń umów">
                         <p:dataTable id="datalist" value="#{rozwiazanieumowyView.lista}" var="itemroz"
                                      selectionMode="single" selection="#{rozwiazanieumowyView.selectedlista}"
