--- a/kadry/src/main/webapp/umowa/sub/dane_rodzajumowy.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_rodzajumowy.xhtml
@@ -8,7 +8,7 @@
     xmlns:bcf="http://brzaskun.com/facelets"
 >
     <p:outputPanel style="height: 60px" id="panelumowadane0">
-        <h:form id="UmowaWyborForm">
+        <h:form styleClass="formumowa" id="UmowaWyborForm">
             <p:panelGrid columns="2" style="padding: 10px;">
                 <p:outputLabel value="wybierz rodzaj umowy do przeglądania/edycji" for="rodzajumowy" />
                 <p:selectOneMenu id="rodzajumowy" value="#{umowaView.rodzajumowy}"  autoWidth="false" style="width: 300px;" filter="true" filterMatchMode="contains" required="true">
