--- a/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_umowa_praca.xhtml
@@ -8,8 +8,8 @@
     xmlns:bcf="http://brzaskun.com/facelets"
     >
     <p:outputPanel style="margin-top: 10px;">
-        <h:form id="UmowaListForm">
-           
+        <h:form styleClass="formumowa" id="UmowaListForm">
+                
                 <p:panel header="Wykaz umów o pracę / Gdy jest pusta sprawdź w parametrach przyporządkowanie kodu do umowy">
                 <p:dataTable id="datalist" value="#{umowaView.listapraca}" var="itemumowa" widgetVar="dataListumowa"
                              selection="#{umowaView.selectedlista}" emptyMessage="Brak zawartych umów"
