--- a/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
+++ b/kadry/src/main/webapp/umowa/sub/dane_zmiennapotracenie.xhtml
@@ -9,7 +9,7 @@
     <p:panelGrid columns="2" columnClasses="fifty-percent fifty-percent">
            
             <p:outputPanel style="height: 150px" styleClass="panelzramka">
-                <h:form id="ZmiennapotraceniaCreateForm">
+                <h:form styleClass="formumowa" id="ZmiennapotraceniaCreateForm">
                     <p:panel header="Dodawanie/edycja zmiennych potrąceń"/>
                     <h:panelGroup id="display">
                         <p:panelGrid columns="6" rendered="#{zmiennaPotraceniaView.selected != null}">
@@ -32,7 +32,7 @@
                 </h:form>
             </p:outputPanel>
         <p:outputPanel>
-                <h:form id="SkladnikporaceniaListForm">
+                <h:form styleClass="formumowa" id="SkladnikporaceniaListForm">
                     <p:panel header="Wykaz zmiennych potrąceń">
                         <p:dataTable id="datalist" value="#{zmiennaPotraceniaView.lista}" var="itemzmiennapotr"
                                      selectionMode="multiple" selection="#{pracownikView.selectedlista}"
