grupy dla wydrukow list plac

--- a/kadry/src/main/webapp/kalendarz/index.xhtml
+++ b/kadry/src/main/webapp/kalendarz/index.xhtml
@@ -28,7 +28,7 @@
                             <p:submenu icon="pi pi-users" label="pracownicy" style="width: 150px">
                                 <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy wykaz" style="width: 150px" action="Pracownikwykaz"/>
                                 <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy angaże" style="width: 150px" action="Pracownik"/>
-                                <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy dane" style="width: 150px" action="Pracownikdane"/>
+                                <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy dane" style="width: 150px" action="Pracownikdane"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy grupy" style="width: 150px" action="Pracownikgrupy"/>
                                  <p:menuitem icon="pi pi-ellipsis-v" value="pracownicy alerty" style="width: 150px" action="Pracownikalerty"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy aneksy" style="width: 150px" action="Pracownikaneksy"/><p:menuitem icon="pi pi-ellipsis-v" value="pracownicy umowy" style="width: 150px" action="Pracownikumowy"/>
                             </p:submenu>
                             <p:menuitem icon="pi pi-file" value="umowy" style="width: 150px" action="Umowa"/>
