--- a/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
+++ b/kadry/src/main/webapp/admin/sub/dialog/dialog_rachunek_zlecenia.xhtml
@@ -58,6 +58,8 @@
                     <bcf:outputpl value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.wynagrodzeniegodzinoweoddelegowaniewaluta}"/>
                     <p:outputLabel value="kurs waluty: "/>
                     <bcf:outputpl4 value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.kurswaluty}"/>
+                    <p:outputLabel value="data waluty: "/>
+                    <h:outputText value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.datawaluty}"/>
                     <p:outputLabel value="symbol waluty: "/>
                     <h:outputText value="#{rachunekZlecenieView.rachunekdoumowyzlecenia.symbolwaluty}"/>
                     <p:outputLabel value="wynagrodzenie godzinowe Oddelegowanie PLN:"/>
