--- a/kadry/src/main/webapp/pracownikgrupy/sub/pracownicy_grupy.xhtml
+++ b/kadry/src/main/webapp/pracownikgrupy/sub/pracownicy_grupy.xhtml
@@ -16,7 +16,7 @@
                             <p:outputLabel value="nazwa" for="telefon" />
                             <p:inputText id="telefon" value="#{grupakadryView.selected.nazwa}" title="nazwa grupy" size="25" required="false"/>
                         </p:panelGrid>
-                        <p:commandButton styleClass="buttonnorm" actionListener="#{grupakadryView.create}" value="dodaj" update="display,@(.form2)" />
+                        <p:commandButton styleClass="buttonnorm" actionListener="#{grupakadryView.create}" value="dodaj" update="display,@(.form2),@(.formlistagrupy)" />
                     </h:panelGroup>
                 </h:form>
                 <h:form id="GrupaListForm" styleClass="form1 form2">
@@ -52,7 +52,7 @@
         </p:outputPanel>
         <p:outputPanel>
             <p:panelGrid columns="2">
-                <h:form id="GrupaListwyborForm">
+                <h:form id="GrupaListwyborForm" styleClass="formlistagrupy">
                     <p:panelGrid columns="1">
                         <p:dataTable value="#{grupakadryView.lista2}" var="poz" size="small"
                                      emptyMessage="brak grup" style="height: 100px; overflow-y: scroll; width: 350px;margin-left: 100px;"
